[package]
name = "smpte2022-1-packet"
version = "0.3.0"
description = "Parser for SMPTE 2022-1 packet header format"
categories = [ "multimedia::video" ]
license = "MIT/Apache-2.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
repository = "https://github.com/dholroyd/smpte2022-1-packet"
keywords = [ "mpegts", "FEC", "2022-1", "ProMPEG", "2d-parity-FEC" ]
edition = "2018"

[dependencies]
rtp-rs = "0.3.0"

[dev-dependencies]
hex-literal = "0.1"
